<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/nombre"
            android:layout_height="wrap_content">
        </TextView>
        
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/nombre"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>


    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cedula"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/cedula"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/f_nacimiento"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/f_nacimiento"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:text="@string/A"
            android:id="@+id/votacionA"
            android:layout_height="wrap_content">
        </Button>


        <Button
            android:layout_width="wrap_content"
            android:text="@string/B"
            android:id="@+id/votacionB"
            android:layout_height="wrap_content">
        </Button>


        <Button
            android:layout_width="wrap_content"
            android:text="@string/C"
            android:id="@+id/votacionC"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>










</LinearLayout>